  * tests/adt-run: Factorize common tests into superclasses.
  * doc/README.package-tests.rst: Point out that "Test-Command:" is also
    useful for running the same test script under different interpreters or
    different dependencies. (Closes: #809442)
  * Set summary_stream to None after closing it, to avoid trying to write
    late error messages from cleanup into it.

 -- Martin Pitt <mpitt@debian.org>  Sun, 20 Dec 2015 09:52:05 +0100

autopkgtest (3.19) unstable; urgency=medium

  New features/behaviour changes:
  * Add adt-virt-lxd runner for LXD. (LP: #1519677)
  * Add adt-build-lxd tool for building or updating an LXD image with
    standard autopkgtest customizations applied. This is similar to
    adt-build-lxc.
  * Unify test bed setup scripts for VMs (adt-setup-vm), containers (in
    adt-build-lxc) and cloud (setup-commands/cloud-vm-setup) into a common
    script setup-commands/setup-testbed. This will work both for image
    building (VM, cloud, LXC, LXD) and as --setup-commands (in which case some
    actions are skipped).
  * setup-commands/setup-testbed: Clean up many more packages. Only do this
    when building an image, to avoid accidentally destroying testbeds which
    are not minimal autopkgtest ones.
  * Make --env apply to package builds too. With that you can e. g. set
    DEB_BUILD_OPTIONS.
  * Add new action type --git-source which installs git (unless already
    present), checks out a remote branch, and then behaves like
    --unbuilt-tree.
  * adt-virt-lxc.1: Mention adt-build-lxc in "Requirements".

  Bug fixes:
  * If apt-get fails when installing test dependencies and apt
    pinning is in use, also retry without pinning. This was already done in
    the case of apt-get succeeding but removing our "satdep" dummy package
    (the common case), but this does not cover upgrades of Priority: >=
    important packages which make apt-get exit with non-zero.
  * Set $TERM in testbed to the host's value when starting an interactive